--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.5.0-alpha01"
+
 
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
@@ -56,6 +56,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    //Coil
+    implementation "io.coil-kt:coil-compose:$coil_version"
 
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'androidx.core:core-ktx:1.7.0'
