--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
         compose_version = '1.0.1'
+        nav_version = "2.5.0-alpha01"
+        coil_version = "2.0.0-rc02"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
